# Blog-regression-nn

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: model.py  params.py  predict.py  preprocessing.py  train.py
